--- a/report/homework/0610.md
+++ b/report/homework/0610.md
@@ -1,52 +1,51 @@
 # 폰 노이만 구조 (Von Neumann Architecture)
 
-## 1. 개요
+## 📌1. 개요
 
-폰 노이만 구조는 1945년 수학자 존 폰 노이만(John von Neumann)이 제안한 컴퓨터 설계 개념으로, 현대 컴퓨터의 기본 구조가 되었습니다. 이 구조의 핵심은 **저장 프로그램 개념(Stored Program Concept)**으로, 프로그램과 데이터를 동일한 메모리에 저장한다는 것입니다.
+폰 노이만 구조는 1945년 수학자 존 폰 노이만(John von Neumann)이 제안한 컴퓨터 설계 개념으로, 현재 대부분의 범용 컴퓨터가 따르는 기본 구조 이다. 이 구조의 핵심은 */저장 프로그램 개념(Stored Program Concept)*/으로, 프로그램과 데이터를 동일한 메모리에 저장하고 중앙처리장치(CPU)가 순차적으로 명령어를 처리하는 특징을 갖는다.
 
 ## 2. 핵심 특징
+1.프로그램 명령어와 데이터가 같은 메모리 공간에 저장됨
+2.프로그램을 메모리에 로드하여 실행 가능
+3.프로그램 수정이 하드웨어 변경 없이 가능
+4.명령어를 메모리에서 순차적으로 가져와 실행
+5.프로그램 카운터(PC)를 통해 다음 실행할 명령어 주소 관리
 
-### 2.1 저장 프로그램 개념
-- 프로그램 명령어와 데이터가 같은 메모리 공간에 저장됨
-- 프로그램을 메모리에 로드하여 실행 가능
-- 프로그램 수정이 하드웨어 변경 없이 가능
-
-### 2.2 순차 실행
-- 명령어를 메모리에서 순차적으로 가져와 실행
-- 프로그램 카운터(PC)를 통해 다음 실행할 명령어 주소 관리
-
-## 3. 주요 구성 요소
+## 🔎3. 주요 구성 요소
 
 ### 3.1 중앙처리장치 (CPU)
-- **제어장치 (Control Unit)**
-  - 명령어 해석 및 실행 제어
-  - 다른 구성요소들의 동작 조율
-- **산술논리연산장치 (ALU)**
-  - 산술 연산 (덧셈, 뺄셈, 곱셈, 나눗셈)
-  - 논리 연산 (AND, OR, NOT 등)
-  - 비교 연산
+- 연산,제어 담당
+- 구성
+  - 산술논리장치(ALU)
+  - 레지스터
+  - 명령 레지스터
+  - 프로그램 카운터
 
 ### 3.2 메모리 (Memory)
-- **주기억장치 (Primary Memory)**
-  - RAM: 휘발성, 빠른 접근 속도
-  - ROM: 비휘발성, 기본 시스템 정보 저장
-- **보조기억장치 (Secondary Memory)**
-  - 하드디스크, SSD, CD/DVD 등
-  - 대용량 데이터 영구 저장
+-프로그램 명령어와 데이터를 함께 저장하는 공간
+  - 주기억장치 (Primary Memory)
+    - RAM: 휘발성, 빠른 접근 속도
+    - ROM: 비휘발성, 기본 시스템 정보 저장
+  - 보조기억장치 (Secondary Memory)
+    - 하드디스크, SSD, CD/DVD 등
+    - 대용량 데이터 영구 저장
 
 ### 3.3 입출력 장치 (I/O Devices)
-- **입력 장치**: 키보드, 마우스, 터치스크린 등
-- **출력 장치**: 모니터, 프린터, 스피커 등
+-외부와의 데이터 교환 담당
+  - 입력 장치: 키보드, 마우스, 터치스크린 등
+  - 출력 장치: 모니터, 프린터, 스피커 등
 
 ### 3.4 버스 (Bus)
-- **데이터 버스**: 데이터 전송
-- **주소 버스**: 메모리 주소 전송
-- **제어 버스**: 제어 신호 전송
+- 데이터 전달 통로
+- 종류
+  - 데이터 버스: 데이터 전송
+  - 주소 버스: 메모리 주소 전송
+  - 제어 버스: 제어 신호 전송
 
-## 4. 명령어 실행 사이클
+## 4. ⚙동작 원리
 
 ### 4.1 Fetch (가져오기)
-1. 프로그램 카운터(PC)가 가리키는 주소의 명령어를 메모리에서 가져옴
+1. 프로그램 카운터(PC)가 가리키는 주소의 명령어를 메모리에    서 가져옴
 2. 명령어를 명령어 레지스터(IR)에 저장
 3. PC 값을 다음 명령어 주소로 증가
 
@@ -57,34 +56,31 @@
 
 ### 4.3 Execute (실행)
 1. ALU나 다른 기능 유닛에서 연산 수행
-2. 결과를 레지스터나 메모리에 저장
-3. 필요시 입출력 장치와 데이터 교환
+2. 필요시 입출력 장치와 데이터 교환
 
-## 5. 장점
+### 4.4 Store (저장)
+1. 결과를 레지스터나 메모리에 저장
 
-### 5.1 프로그래밍의 유연성
-- 소프트웨어만 변경하여 다양한 작업 수행 가능
-- 하드웨어 수정 없이 새로운 프로그램 실행
+## 📘5. 장점과 단점
 
-### 5.2 범용성
-- 다양한 종류의 계산과 데이터 처리 가능
-- 특수 목적 컴퓨터보다 활용도 높음
+### 장점
+1. 프로그래밍의 유연성
+  - 소프트웨어만 변경하여 다양한 작업 수행 가능
+  - 하드웨어 수정 없이 새로운 프로그램 실행
+2. 범용성
+  - 다양한 종류의 계산과 데이터 처리 가능
+  - 특수 목적 컴퓨터보다 활용도 높음
+3. 단순성
+  - 하나의 하드웨어로 다양한 작업 처리
+  - 개발 및 유지보수 비용 절감
 
-### 5.3 경제성
-- 하나의 하드웨어로 다양한 작업 처리
-- 개발 및 유지보수 비용 절감
+### 단점
+1. 폰 노이만 병목현상 (Von Neumann Bottleneck)
+  - CPU와 메모리 간의 데이터 전송 속도가 성능 제약
+  - 메모리 접근 시간이 전체 성능에 큰 영향
+  - CPU가 데이터를 읽거나 쓸 때 대기 시간 발생
 
-## 6. 단점
-
-### 6.1 폰 노이만 병목현상 (Von Neumann Bottleneck)
-- CPU와 메모리 간의 데이터 전송 속도가 성능 제약
-- 메모리 접근 시간이 전체 성능에 큰 영향
-
-### 6.2 순차 처리의 한계
-- 명령어를 하나씩 순차적으로 처리
-- 병렬 처리에 비해 상대적으로 느림
-
-## 7. 현대적 개선사항
+## 7. 🛠발전
 
 ### 7.1 캐시 메모리
 - CPU와 주기억장치 사이의 고속 메모리
@@ -102,16 +98,6 @@
 - 분기 예측을 통한 성능 최적화
 - 조건부 명령어 처리 효율 향상
 
-## 8. 현재의 적용
-
-현대의 거의 모든 컴퓨터 시스템이 폰 노이만 구조를 기반으로 합니다:
-
-- **개인용 컴퓨터**: 데스크톱, 노트북
-- **모바일 기기**: 스마트폰, 태블릿
-- **서버 시스템**: 웹 서버, 데이터베이스 서버
-- **임베디드 시스템**: IoT 기기, 자동차 제어 시스템
-- **슈퍼컴퓨터**: 과학 계산, 시뮬레이션
-
 ## 9. 대안 구조
 
 ### 9.1 하버드 구조 (Harvard Architecture)
@@ -122,12 +108,6 @@
 ### 9.2 데이터플로우 구조
 - 데이터의 흐름에 따라 명령어 실행
 - 병렬 처리에 특화
-
-## 10. 결론
-
-폰 노이만 구조는 75년이 넘는 시간 동안 컴퓨터 발전의 기초가 되어왔습니다. 비록 병목현상과 같은 한계가 있지만, 범용성과 프로그래밍의 유연성이라는 큰 장점으로 인해 현재까지도 가장 널리 사용되는 컴퓨터 구조입니다. 
-
-현대의 다양한 최적화 기술들이 이러한 한계를 극복하며, 폰 노이만 구조는 계속해서 진화하고 있습니다. 앞으로도 새로운 기술들과 결합하여 더욱 발전된 형태로 우리의 디지털 세상을 이끌어갈 것입니다.
 
 ---
 
