--- a/report/homework/0610.md
+++ b/report/homework/0610.md
@@ -1,6 +1,6 @@
 # 폰 노이만 구조 (Von Neumann Architecture)
 
-## 📌1. 개요
+## 📌1. 폰 노이만 구조란?
 
 폰 노이만 구조는 1945년 수학자 존 폰 노이만(John von Neumann)이 제안한 컴퓨터 설계 개념으로, 현재 대부분의 범용 컴퓨터가 따르는 기본 구조 이다. 이 구조의 핵심은 */저장 프로그램 개념(Stored Program Concept)*/으로, 프로그램과 데이터를 동일한 메모리에 저장하고 중앙처리장치(CPU)가 순차적으로 명령어를 처리하는 특징을 갖는다.
 
@@ -13,7 +13,7 @@
 
 ## 🔎3. 주요 구성 요소
 
-### 3.1 중앙처리장치 (CPU)
+### 중앙처리장치 (CPU)
 - 연산,제어 담당
 - 구성
   - 산술논리장치(ALU)
@@ -21,7 +21,7 @@
   - 명령 레지스터
   - 프로그램 카운터
 
-### 3.2 메모리 (Memory)
+### 메모리 (Memory)
 -프로그램 명령어와 데이터를 함께 저장하는 공간
   - 주기억장치 (Primary Memory)
     - RAM: 휘발성, 빠른 접근 속도
@@ -43,22 +43,22 @@
   - 제어 버스: 제어 신호 전송
 
 ## 4. ⚙동작 원리
-
-### 4.1 Fetch (가져오기)
+  -아래의 동작 원리를 반복.
+### Fetch (가져오기)
 1. 프로그램 카운터(PC)가 가리키는 주소의 명령어를 메모리에    서 가져옴
 2. 명령어를 명령어 레지스터(IR)에 저장
 3. PC 값을 다음 명령어 주소로 증가
 
-### 4.2 Decode (해석)
+### Decode (해석)
 1. 제어장치가 명령어를 해석
 2. 필요한 데이터의 위치 파악
 3. 실행에 필요한 제어 신호 준비
 
-### 4.3 Execute (실행)
+### Execute (실행)
 1. ALU나 다른 기능 유닛에서 연산 수행
 2. 필요시 입출력 장치와 데이터 교환
 
-### 4.4 Store (저장)
+### Store (저장)
 1. 결과를 레지스터나 메모리에 저장
 
 ## 📘5. 장점과 단점
@@ -82,30 +82,30 @@
 
 ## 7. 🛠발전
 
-### 7.1 캐시 메모리
+### 캐시 메모리
 - CPU와 주기억장치 사이의 고속 메모리
 - 자주 사용되는 데이터 임시 저장으로 속도 향상
 
-### 7.2 파이프라이닝
+### 파이프라이닝
 - 명령어 실행 단계를 겹쳐서 처리
 - 전체적인 처리량 증가
 
-### 7.3 멀티코어 프로세서
+### 멀티코어 프로세서
 - 여러 개의 CPU 코어로 병렬 처리
 - 동시에 여러 작업 수행 가능
 
-### 7.4 예측 실행
+### 예측 실행
 - 분기 예측을 통한 성능 최적화
 - 조건부 명령어 처리 효율 향상
 
 ## 9. 대안 구조
 
-### 9.1 하버드 구조 (Harvard Architecture)
+### 하버드 구조 (Harvard Architecture)
 - 명령어 메모리와 데이터 메모리를 분리
 - 동시 접근으로 성능 향상
 - DSP, 마이크로컨트롤러에서 주로 사용
 
-### 9.2 데이터플로우 구조
+### 데이터플로우 구조
 - 데이터의 흐름에 따라 명령어 실행
 - 병렬 처리에 특화
 
@@ -115,3 +115,30 @@
 - Computer Organization and Design (Patterson & Hennessy)
 - 컴퓨터 구조 및 설계 관련 학술 논문들
 - Von Neumann의 원논문: "First Draft of a Report on the EDVAC" (1945)
+
+
+# HTML 시맨틱 태그 (Semantic Tag)
+
+## 📌 시맨틱 태그란?
+
+HTML5에서 도입된 태그로, 웹 콘텐츠의 구조와 의미를 명확하게 표현하는 역할. 콘텐츠의 목적과 의미를 명시적으로 나타내므로 개발자, 브라우저, 검색 엔진, 보조기술이 페이지 구조를 더 쉽게 이해할 수 있게 한다.
+
+## 🔎시맨틱 태그의 종류
+
+| <태그>          | 용도 및 의미                               |
+| ------------- | -------------------------------------|
+| **header**    | 문서 또는 섹션의 머리말(로고,제목,내비게이션등 포함)                 |
+| **nav**  | 주요 내비게이션 링크 집합                |
+| **maim**   | 문서의 주요 콘텐츠(페이지당 한 번만 사용,핵심 내용)                 |
+| **section**       | 주제별로 그룹화된 콘텐츠 블록(논리적 단락) |
+| **article**   | 독립적으로 구분 가능한 콘텐츠(뉴스 기사, 블로그 글 등)                 |
+| **aside** | 부가적, 보조적 콘텐츠(사이드 바, 광고, 관련 링크 등)            |
+| **footer** | 문서 또는 섹션의 바닥글(저작권, 연락처 등) |
+| **figure**    | 이미지나 삽화 등의 독립적인 콘텐츠 묶음                |
+| **figcaption**  | figure 태그의 설명 텍스트               |
+| **mark**   | 강조 표시(중요한 텍스트 강조)                |
+| **time**       | 시간 또는 날짜 정보 명시 |
+
+
+
+
